[B]Version 1.1.113[/B]
- speedporn - fix categories
