@@ -1,3 +1,4 @@
 [B]Version 1.1.113[/B]
 - speedporn - fix categories
+- familypornhd - fix playback
 
